Project

General

Profile

Actions

Bug #7281

closed

Fix typo in macro name to actually enable rb_reserved_fd_p()

Bug #7281: Fix typo in macro name to actually enable rb_reserved_fd_p()

Added by Spakman (Mark Somerville) almost 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
-
ruby -v:
2.0.0-preview1
Backport:
[ruby-core:48940]

Description

In trunk (r37474), there is a typo in a macro name in the rb_reserved_fd_p() function. This prevents any actual checking that the file descriptor is reserved by the VM.


Files

sleepy_timer_thread_typo.patch (855 Bytes) sleepy_timer_thread_typo.patch A patch to fix the bug Spakman (Mark Somerville), 11/06/2012 01:10 AM

Updated by kosaki (Motohiro KOSAKI) almost 14 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r37483.
Mark, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • thread_pthread.c (rb_reserved_fd_p): fix typo in macro check
    that prevented the ifdef ever being true.
    [Bug #7281] [ruby-core:48940]

Updated by kosaki (Motohiro KOSAKI) almost 14 years ago Actions #2 [ruby-core:48942]

Thanks for digging!

Your patch was commited at r37483 as is.

Actions

Also available in: PDF Atom