* thread_pthread.c (rb_reserved_fd_p): fix typo in macro check   that prevented the ifdef ever being true.   [Bug #7281] [ruby-core:48940]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37483 b2dd03c8-39d4-4d8f-98ff-823fe69b080e